// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceFormHolder Component tests Default Form Holder state Should Properly Mount Form Holder 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "gqd4zb",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "gqd4zb",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <withRouter(ServiceFormHolder)>
      <ServiceFormHolder
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "gqd4zb",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "gqd4zb",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "key": "gqd4zb",
            "pathname": "/",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
      >
        <div
          id="serviceFormHolder"
        >
          <GridRow>
            <div
              className="row"
            >
              <GridColumn
                computer={14}
                mobile={16}
                tablet={15}
              >
                <div
                  className="fourteen wide computer sixteen wide mobile fifteen wide tablet column"
                >
                  <Button
                    as="button"
                    content="Open Form"
                    id="serviceFormToggleBtn"
                    onClick={[Function]}
                  >
                    <Ref
                      innerRef={
                        Object {
                          "current": <button
                            class="ui button"
                            id="serviceFormToggleBtn"
                          >
                            Open Form
                          </button>,
                        }
                      }
                    >
                      <RefFindNode
                        innerRef={
                          Object {
                            "current": <button
                              class="ui button"
                              id="serviceFormToggleBtn"
                            >
                              Open Form
                            </button>,
                          }
                        }
                      >
                        <button
                          className="ui button"
                          id="serviceFormToggleBtn"
                          onClick={[Function]}
                        >
                          Open Form
                        </button>
                      </RefFindNode>
                    </Ref>
                  </Button>
                </div>
              </GridColumn>
            </div>
          </GridRow>
        </div>
      </ServiceFormHolder>
    </withRouter(ServiceFormHolder)>
  </Router>
</MemoryRouter>
`;

exports[`ServiceFormHolder Component tests Form Holder state OPEN - NO Current Service Data Should Properly Mount Form Holder, respond to '#serviceToggleBtn' click 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "xhlp0f",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "xhlp0f",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Component>
      <withRouter(ServiceFormHolder)>
        <ServiceFormHolder
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "xhlp0f",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "xhlp0f",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "xhlp0f",
              "pathname": "/",
              "search": "",
              "state": undefined,
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/",
              "url": "/",
            }
          }
        >
          <div
            id="serviceFormHolder"
          >
            <GridRow>
              <div
                className="row"
              >
                <GridColumn
                  computer={14}
                  mobile={16}
                  tablet={15}
                >
                  <div
                    className="fourteen wide computer sixteen wide mobile fifteen wide tablet column"
                  >
                    <Button
                      as="button"
                      content="Close Form"
                      id="serviceFormToggleBtn"
                      onClick={[Function]}
                    >
                      <Ref
                        innerRef={
                          Object {
                            "current": <button
                              class="ui button"
                              id="serviceFormToggleBtn"
                            >
                              Close Form
                            </button>,
                          }
                        }
                      >
                        <RefFindNode
                          innerRef={
                            Object {
                              "current": <button
                                class="ui button"
                                id="serviceFormToggleBtn"
                              >
                                Close Form
                              </button>,
                            }
                          }
                        >
                          <button
                            className="ui button"
                            id="serviceFormToggleBtn"
                            onClick={[Function]}
                          >
                            Close Form
                          </button>
                        </RefFindNode>
                      </Ref>
                    </Button>
                    <ServiceForm
                      description=""
                      handleCreateService={[Function]}
                      handleUpdateService={[Function]}
                      name=""
                      price=""
                    >
                      <div
                        className="createServiceFormHolder"
                      >
                        <Form
                          as="form"
                          id="createServiceForm"
                        >
                          <form
                            className="ui form"
                            id="createServiceForm"
                            onSubmit={[Function]}
                          >
                            <FormField>
                              <div
                                className="field"
                              >
                                <label>
                                  Service name
                                </label>
                                <input
                                  onChange={[Function]}
                                  placeholder="Service name here ..."
                                  value=""
                                />
                              </div>
                            </FormField>
                            <FormField>
                              <div
                                className="field"
                              >
                                <label>
                                  Service price
                                </label>
                                <input
                                  onChange={[Function]}
                                  placeholder="Service price here..."
                                  value=""
                                />
                              </div>
                            </FormField>
                            <FormField
                              control={[Function]}
                              id="form-textarea-control-opinion"
                              label="Store Description"
                              onChange={[Function]}
                              placeholder="Service description here..."
                              value=""
                            >
                              <div
                                className="field"
                              >
                                <label
                                  htmlFor="form-textarea-control-opinion"
                                >
                                  Store Description
                                </label>
                                <TextArea
                                  aria-describedby={null}
                                  as="textarea"
                                  id="form-textarea-control-opinion"
                                  onChange={[Function]}
                                  placeholder="Service description here..."
                                  rows={3}
                                  value=""
                                >
                                  <Ref
                                    innerRef={
                                      Object {
                                        "current": <textarea
                                          id="form-textarea-control-opinion"
                                          placeholder="Service description here..."
                                          rows="3"
                                        />,
                                      }
                                    }
                                  >
                                    <RefFindNode
                                      innerRef={
                                        Object {
                                          "current": <textarea
                                            id="form-textarea-control-opinion"
                                            placeholder="Service description here..."
                                            rows="3"
                                          />,
                                        }
                                      }
                                    >
                                      <textarea
                                        aria-describedby={null}
                                        id="form-textarea-control-opinion"
                                        onChange={[Function]}
                                        onInput={[Function]}
                                        placeholder="Service description here..."
                                        rows={3}
                                        value=""
                                      />
                                    </RefFindNode>
                                  </Ref>
                                </TextArea>
                              </div>
                            </FormField>
                            <Button
                              as="button"
                              content="Create  New Service"
                              id="adminServiceFormCreate"
                              onClick={[Function]}
                              type="submit"
                            >
                              <Ref
                                innerRef={
                                  Object {
                                    "current": <button
                                      class="ui button"
                                      id="adminServiceFormCreate"
                                      type="submit"
                                    >
                                      Create  New Service
                                    </button>,
                                  }
                                }
                              >
                                <RefFindNode
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui button"
                                        id="adminServiceFormCreate"
                                        type="submit"
                                      >
                                        Create  New Service
                                      </button>,
                                    }
                                  }
                                >
                                  <button
                                    className="ui button"
                                    id="adminServiceFormCreate"
                                    onClick={[Function]}
                                    type="submit"
                                  >
                                    Create  New Service
                                  </button>
                                </RefFindNode>
                              </Ref>
                            </Button>
                          </form>
                        </Form>
                      </div>
                    </ServiceForm>
                  </div>
                </GridColumn>
              </div>
            </GridRow>
          </div>
        </ServiceFormHolder>
      </withRouter(ServiceFormHolder)>
    </Component>
  </Router>
</MemoryRouter>
`;
